# DGIIM-SEGUNDO-INFORMA-TICA

INFORMÁTICA/ALGORÍTMICA/PRÁCTICAS/PRÁCTICA 1 EFICIENCIA/Practica1Eficiencia/: CMakeLists.txt  burbuja.cpp  heapsort.cpp  insercion.cpp  mergesort.cpp  quicksort.cpp  seleccion.cpp
INFORMÁTICA/ALGORÍTMICA/PRÁCTICAS/PRÁCTICA 1 EFICIENCIA/Practica1Eficiencia/burbuja/: burbuja_m_so  burbuja_me_co  burbuja_me_so  burbuja_p_so  mide-tiempos.sh
INFORMÁTICA/ALGORÍTMICA/PRÁCTICAS/PRÁCTICA 1 EFICIENCIA/Practica1Eficiencia/heapsort/: heapsort_m_so  heapsort_me_co  heapsort_me_so  heapsort_p_so  mide-tiempos.sh
INFORMÁTICA/ALGORÍTMICA/PRÁCTICAS/PRÁCTICA 1 EFICIENCIA/Practica1Eficiencia/insercion/: insercion_m_so  insercion_me_co  insercion_me_so  insercion_p_so  mide-tiempos.sh
INFORMÁTICA/ALGORÍTMICA/PRÁCTICAS/PRÁCTICA 1 EFICIENCIA/Practica1Eficiencia/mergesort/: mergesort_m_so  mergesort_me_co  mergesort_me_so  mergesort_p_so  mide-tiempos.sh
INFORMÁTICA/ALGORÍTMICA/PRÁCTICAS/PRÁCTICA 1 EFICIENCIA/Practica1Eficiencia/quicksort/: mide-tiempos.sh  quicksort_m_so  quicksort_me_co  quicksort_p_so
INFORMÁTICA/ALGORÍTMICA/PRÁCTICAS/PRÁCTICA 1 EFICIENCIA/Practica1Eficiencia/seleccion/: mide-tiempos.sh  seleccion_m_so  seleccion_me_co  seleccion_me_so  seleccion_p_so
INFORMÁTICA/ESTRUCTURAS DE DATOS/TEORÍA/TEMA 5 ÁRBOLES/CÓDIGOS/tree_lcrs/: CMakeLists.txt
INFORMÁTICA/ESTRUCTURAS DE DATOS/TEORÍA/TEMA 5 ÁRBOLES/CÓDIGOS/tree_lcrs/include/: aux_funcs.h  tree.h  tree.tpp
INFORMÁTICA/ESTRUCTURAS DE DATOS/TEORÍA/TEMA 5 ÁRBOLES/CÓDIGOS/tree_lcrs/src/: 1_tree_manipulation.cpp  (+4 more)
(+507 files in other folders)
