cmake_minimum_required(VERSION 3.24)
project(Practica1)

set(CMAKE_CXX_STANDARD 14)

add_executable (burbuja burbuja.cpp)
add_executable(heapsort heapsort.cpp)
add_executable(insercion insercion.cpp)
add_executable(mergesort mergesort.cpp)
add_executable(quicksort quicksort.cpp)
add_executable(seleccion seleccion.cpp)
